package ar.edu.utn.frba.dds;

public enum Estado {
    PENDIENTE,
    ACEPTADA,
    RECHAZADA
}
