package ar.edu.utn.frba.dds;

import java.time.LocalDateTime;

public class Multimedia {
  private String url;
  private String tipo;
  private String formato;
  private long tamanio;
  private LocalDateTime fechaSubida;

}
